--- a/Community-Center.html
+++ b/Community-Center.html
@@ -13,7 +13,7 @@
         <meta property="og:image:type" content="image/jpeg">
         <meta property="og:image:width" content="400">
         <meta property="og:image:height" content="300">
-        <link rel="icon" type="image/png" href="./Assets/ico.svg">
+        <link rel="icon" type="image/png" href="./Assets/ico.png">
 </head>
 
 
