--- a/index.html
+++ b/index.html
@@ -48,13 +48,11 @@
   </div>-->
   
   <div class="square-wrapper">
-    <div class="square square-transition"></div>
+    <div class="square square-transition"><img src="Assets/line12x.png" alt="design elements with information" width="100%" >
+      <img src="Assets/line22x.png" alt="design elements with information" width="100%" >
+      <img src="Assets/line32x.png" alt="design elements with information" width="100%" >
+    </div>
   </div>
-<div class="stats">
-  <img src="Assets/line12x.png" alt="design elements with information" width="100%" >
-  <img src="Assets/line22x.png" alt="design elements with information" width="100%" >
-  <img src="Assets/line32x.png" alt="design elements with information" width="100%" >
-</div>
   
   <div id="partTwo">
     <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
