--- a/donate.html
+++ b/donate.html
@@ -55,13 +55,7 @@
   
 </div>
   </div>
-<div id="partTwo">
-  <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
-  <h1>WILL YOU JOIN US</h1>
-      <p>TO HELP CORRECT THE DIRE LIVING SITUATIONS
-        OF THE PEOPLE OF TOGO?</p>
-        <h2>DONATE BELOW!</h2>   
-</div>
+
 
   
   <div class="donAte">
@@ -78,7 +72,11 @@
   <script src="https://tithe.ly/widget/v3/give.js?3"></script>
   -->
 
-
+  <div id="partTwo2">
+    <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
+    <h1>THANK YOU !</h1>
+        
+  </div>
 
   <div class="footer">
     <h1>Stay connected with QEWFA!</h1>
