--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
   
   <!-- Use any element to open/show the overlay navigation menu -->
   <span class="mobileMenu" style="font-size:50px;cursor:pointer" onclick="openNav()">&#9776; </span>
+  <div class="parallaX">
+    <img class="logoQe" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100%" style="z-index: 0;">
+  </div>
   <div id="partlOne">
+    
     <div class="animatesss">
       <span class="colorBlue"></span>
     <img src="Assets/waterforall5.webp" alt="akbelu thank you" width="100%" class="letsGif">
