--- a/katoe.html
+++ b/katoe.html
@@ -56,34 +56,32 @@
     </div>
 <!-- Container element -->
 
-<div class="statS">
-  <div class="twoSides">
-    <div class="leftSide4">
 
+<div class="katToe">
+  <div class="katToe1 rowRev1">
+    <div class="katoeLeft">
+      <p>&emsp; The Katoe Project is QEWFA’s first large scale project in Togo, West Africa which will kick off all of the great things we plan to execute in the area. Katoe is a small village about 118 KM outside of Lome, Togo’s capital city. The only existing economy of sorts is agriculture where the women and children of the village set out to the markets each day in hopes of selling their crop then make the 2km trek back to the village, often by foot, to cook and take care of their families. The roads are not paved and there is no drinkable water on the way to provide any relief to the travelers. Currently, there is no electricity and no running water in or around the village.</p>
+      <p>&emsp; There is also no school within the village. The nearest school for children to attend is approximately 4 km away in a neighboring village. Because of the scarcity of drinkable water in Katoe both hygiene and hydration are two extremely important things that are inevitably neglected and are the main culprits behind poor school attendance, cleanliness, and the declining health and hygienic conditions of the children and the families.  </p>
+      <p>&emsp; With the nearest hospital over 6 km away, villagers rarely get the proper medical attention that is required for both the really young and the elderly and everyone in between. Just as water is scare so are the likes of transportation so medical emergencies, child birth, accidents, and the sickly often go unattended and / or undiagnosed</p>
+      <p>&emsp; Villagers must make the journey to the nearest water source in other villages and to gather and take back what they can carry to their families. Conditions worsen during the dry season when there is no rain water to collect and the nearby wildlife drink what little water does manage to pool after a light rain.further contributing to the harsh living conditions of the inhabitants.</p>
     </div>
-    <div class="rightSide2">
-      <div class="myText">
-        <p>&emsp; The Katoe Project is QEWFA’s first large scale project in Togo, West Africa which will kick off all of the great things we plan to execute in the area. Katoe is a small village about 118 KM outside of Lome, Togo’s capital city. The only existing economy of sorts is agriculture where the women and children of the village set out to the markets each day in hopes of selling their crop then make the 2km trek back to the village, often by foot, to cook and take care of their families. The roads are not paved and there is no drinkable water on the way to provide any relief to the travelers. Currently, there is no electricity and no running water in or around the village.</p>
-        <p>&emsp; There is also no school within the village. The nearest school for children to attend is approximately 4 km away in a neighboring village. Because of the scarcity of drinkable water in Katoe both hygiene and hydration are two extremely important things that are inevitably neglected and are the main culprits behind poor school attendance, cleanliness, and the declining health and hygienic conditions of the children and the families.  </p>
-        <p>&emsp; With the nearest hospital over 6 km away, villagers rarely get the proper medical attention that is required for both the really young and the elderly and everyone in between. Just as water is scare so are the likes of transportation so medical emergencies, child birth, accidents, and the sickly often go unattended and / or undiagnosed</p>
-        <p>&emsp; Villagers must make the journey to the nearest water source in other villages and to gather and take back what they can carry to their families. Conditions worsen during the dry season when there is no rain water to collect and the nearby wildlife drink what little water does manage to pool after a light rain.further contributing to the harsh living conditions of the inhabitants.</p>
-      </div>
-    </div>
-  </div>
-<!--side2-->
-  <div class="twoSides twoSideTwo">
-    <div class="rightSide2">
-      <div class="myText">
-        <p>&emsp; QEWFA does not plan to solve all of these problems over night or even tackle them all at once but we do plan to be impactful and initiate positive change and improvement by simply providing people of KATOE  with a basic necessity we need no matter the color, social status, religion, or creed. That is, clean drinkable water.</p>
-        <p>&emsp; QEWFA will be installing solar powered water wells in a central location in Katoe that will give the people of the village access to clean drinkable water. The presence of local clean drinking water will improve hygienic conditions, improve health conditions, augmentation in school and education percentage ,decrease mortality, and ultimately bring jobs to the village as the wells will need to be properly maintained long after QEWFAs presence is gone. </p>
-      </div>
-    </div>
-    <div class="leftSide5">
-      
+    <div class="katoeRight">
+      <img src="Assets/Asset21.png" alt="kid is gatherign water in his bottle froma stream">
     </div>
   </div>
+
+  <div class="katToe1 rowRev">
+   
+    <div class="katoeRight">
+      <p>&emsp; QEWFA does not plan to solve all of these problems over night or even tackle them all at once but we do plan to be impactful and initiate positive change and improvement by simply providing people of KATOE  with a basic necessity we need no matter the color, social status, religion, or creed. That is, clean drinkable water.</p>
+      <p>&emsp; QEWFA will be installing solar powered water wells in a central location in Katoe that will give the people of the village access to clean drinkable water. The presence of local clean drinking water will improve hygienic conditions, improve health conditions, augmentation in school and education percentage ,decrease mortality, and ultimately bring jobs to the village as the wells will need to be properly maintained long after QEWFAs presence is gone. </p>
+    </div>
+    <div class="katoeLeft">
+      <img src="Assets/Asset22.png" alt="a manhole for water">
+    </div>
+  </div>
+  
 </div>
-
 
   
 
