--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="statS">
     <div class="twoSides">
       <div class="leftSide1">
-
+        <img src="Assets/a11a.png" alt="group of people">
       </div>
       <div class="rightSide1">
         <h1>OVER <br>7 MILLION</h1>
@@ -57,14 +57,14 @@
         <h1>39%</h1>
         <h3>DON'T HAVE ACCES<BR>TO CLEAN WATER</h3>
       </div>
-      <div class="leftSide2">
-        
+      <div class="leftSide1">
+        <img src="Assets/a2a.png" alt="group of people">
       </div>
     </div>
 <!--side3-->
     <div class="twoSides">
-      <div class="leftSide3">
-        
+      <div class="leftSide1">
+        <img src="Assets/a33.png" alt="group of people">
       </div>
       <div class="rightSide1">
         <h1>44.5%</h1>
