--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
     <div class="project top">
       <img src="Assets/four.png" alt="bacgkround of Africa" width="100%">
-      <h2>Children Sponsered</h2>
+      <h2>Sponsor a Child</h2>
       <div id="myProgress">
         <div id="myBar4"></div>
       </div>
