--- a/katoe.html
+++ b/katoe.html
@@ -53,7 +53,7 @@
   </div>-->
 
   <div id="mySidenav5" class="sidenav5">
-    <a href="projects.html" id="menu1">Project KATOE</a>
+    <a href="katoe.html" id="menu1">Project KATOE</a>
     <a href="Back-2-school-drive.html" id="menu2">Back 2 School Drive</a>
     <a href="Community-Center.html" id="menu3">Community Center</a>
     <a href="sponsor-a-child.html" id="menu4">Sponsor a Child</a>
