--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="twoSides twoSideTwo">
       <div class="rightSide1">
         <h1>39%</h1>
-        <h3>DON'T HAVE ACCES<BR>TO CLEAN WATER</h3>
+        <h3>DON'T HAVE ACCESS<BR>TO CLEAN WATER</h3>
       </div>
       <div class="leftSide1">
         <img src="Assets/a2a.png" alt="group of people">
@@ -68,7 +68,7 @@
       </div>
       <div class="rightSide1">
         <h1>44.5%</h1>
-        <h3>GRADUATE <BR>ELEMENTRARY SCHOOL</h3>
+        <h3>GRADUATE <BR>ELEMENTARY SCHOOL</h3>
       </div>
     </div>
 
